Added infrastructure for the Worker
