# wb-data-service/docs/swagger.json
@@ -142,7 +142,7 @@
                     "202": {
                         "description": "Accepted",
                         "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/core.PriceHistoryTask"
                         }
                     }
                 }
@@ -283,7 +283,7 @@
                     "202": {
                         "description": "Accepted",
                         "schema": {
-                            "type": "boolean"
+                            "$ref": "#/definitions/core.ProductTask"
                         }
                     }
                 }
@@ -330,6 +330,17 @@
                 "price": {
                     "type": "integer",
                     "example": 20199000
+                }
+            }
+        },
+        "core.PriceHistoryTask": {
+            "type": "object",
+            "properties": {
+                "task_id": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
                 }
             }
         },
@@ -395,6 +406,17 @@
                 "updated_at": {
                     "type": "string",
                     "example": "2024-02-11 18:57:11.811169+00"
+                }
+            }
+        },
+        "core.ProductTask": {
+            "type": "object",
+            "properties": {
+                "task_id": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
                 }
             }
         },
@@ -474,7 +496,7 @@
     },
     "securityDefinitions": {
         "Bearer": {
-            "description": "Type \"Bearer\" followed by a space and JWT token.",
+            "description": "Type \"Bearer\"  followed by a space and JWT token.",
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
